corrected left column p change so that spacing was taken away

--- a/midterm-practice.css
+++ b/midterm-practice.css
@@ -26,7 +26,7 @@ body {
     padding-left: 15px;
 }
 }
-left-column p {
+.left-column p {
   margin-bottom: 0;
   margin-top: 0;
 }
